--- a/src/app/components/task/tasklist/tasklist.component.html
+++ b/src/app/components/task/tasklist/tasklist.component.html
@@ -25,8 +25,8 @@
                 <td>{{ task.description }}</td>
                 
                 <!-- Columna Prioridad -->
-                <td [ngClass]="{'table-danger': task.priority == 'H', 'table-warning': task.priority == 'M', 'table-success': task.priority == 'L'}" [ngSwitch]="task.priority">
-                  <i *ngIf="(task.priority === 'L' || task.priority === 'M') && task.status != 'C'" class="bi bi-arrow-up-circle-fill me-1"></i>
+                <td [ngClass]="{'table-danger': task.priority === 'H', 'table-warning': task.priority === 'M', 'table-success': task.priority === 'L'}" [ngSwitch]="task.priority">
+                  <i *ngIf="(task.priority === 'L' || task.priority === 'M') && task.status != 'C'" class="bi bi-arrow-up-circle-fill me-1" (click)="incrementPriority(task)"></i>
                   <i *ngIf="(task.priority === 'M' || task.priority === 'H') && task.status != 'C'" class="bi bi-arrow-down-circle-fill me-1"></i>
                   <span *ngSwitchCase="'H'"> Alta</span>
                   <span *ngSwitchCase="'M'"> Media</span>
@@ -34,7 +34,7 @@
                 </td>
                 
                 <!-- Columna Estado -->
-                <td [ngClass]="{'table-danger': task.status == 'IP', 'table-warning': task.status == 'C', 'table-success': task.status == 'P'}" [ngSwitch]="task.status">
+                <td [ngClass]="{'table-danger': task.status === 'IP', 'table-warning': task.status === 'C', 'table-success': task.status === 'P'}" [ngSwitch]="task.status">
                   <i *ngIf="task.status === 'P'" class="bi bi-play-fill me-1"></i>
                   <i *ngIf="task.status === 'IP'" class="bi bi-check-lg me-1"></i>
                   <i *ngIf="task.status === 'C'" class="bi bi-arrow-return-right me-1"></i>
@@ -48,7 +48,7 @@
                 
                 <!-- Columna Acciones -->
                 <td>
-                  <i class="bi bi-pencil-square me-2" title="Editar"></i>
+                  <i class="bi bi-pencil-square me-2" title="Editar" (click)="mostrarMensaje()"></i>
                   <i class="bi bi-trash" title="Eliminar"></i>
                 </td>
               </ng-container>
