--- a/src/app/components/task/tasklist/tasklist.component.html
+++ b/src/app/components/task/tasklist/tasklist.component.html
@@ -48,7 +48,7 @@
                 
                 <!-- Columna Acciones -->
                 <td>
-                  <i class="bi bi-pencil-square me-2" title="Editar" (click)="mostrarMensaje()"></i>
+                  <i class="bi bi-pencil-square me-2" title="editar" (click)="mostrarMensaje()"></i>
                   <i class="bi bi-trash" title="Eliminar" (click)="delete(task)"></i>
                 </td>
               </ng-container>
