taskresume con funcionaliades

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 
 <app-navbar></app-navbar>
 <app-tasklist></app-tasklist>
+<img [src]="img"/> <button (click)="cargarImagenAleatoria()">Imagen Aleatoria</button>
+<input type="number" [(ngModel)]="numeroRandom">
+<button value="Actualizar imagen"></button>
+<img [src]="img">
+<p [textContent]="nombre"></p>
 <app-footer></app-footer>
 <router-outlet />
