--- a/src/app/components/task/tasklist/tasklist.component.html
+++ b/src/app/components/task/tasklist/tasklist.component.html
@@ -4,100 +4,11 @@
       <h3>Listado de Tareas</h3>
     </div>
     <div class="col-md-12">
-      <div class="table-responsive">
-        <table class="table table-hover table-striped">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Nombre</th>
-              <th scope="col">Descripción</th>
-              <th scope="col">Prioridad</th>
-              <th scope="col">Estado</th>
-              <th scope="col">Fecha Expiración</th>
-              <th scope="col">Acciones</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let task of taskList">
-              <ng-container *ngIf="!task.isDelete">
-                <th scope="row">{{ task.id }}</th>
-                <td>{{ task.name }}</td>
-                <td>{{ task.description }}</td>
-                
-                <!-- Columna Prioridad -->
-                <td [ngClass]="{'table-danger': task.priority === 'H', 'table-warning': task.priority === 'M', 'table-success': task.priority === 'L'}" [ngSwitch]="task.priority">
-                  <i *ngIf="(task.priority === 'L' || task.priority === 'M') && task.status != 'C'" class="bi bi-arrow-up-circle-fill me-1" (click)="incrementPriority(task)"></i>
-                  <i *ngIf="(task.priority === 'M' || task.priority === 'H') && task.status != 'C'" class="bi bi-arrow-down-circle-fill me-1" (click)="decrementPriority(task)"></i>
-                  <span *ngSwitchCase="'H'"> Alta</span>
-                  <span *ngSwitchCase="'M'"> Media</span>
-                  <span *ngSwitchCase="'L'"> Baja</span>
-                </td>
-                
-                <!-- Columna Estado -->
-                <td [ngClass]="{'table-danger': task.status === 'IP', 'table-warning': task.status === 'C', 'table-success': task.status === 'P'}" [ngSwitch]="task.status">
-                  <i *ngIf="task.status === 'P'" class="bi bi-play-fill me-1" (click)="changeState(task)"></i>
-                  <i *ngIf="task.status === 'IP'" class="bi bi-check-lg me-1" (click)="changeState(task)"></i>
-                  <i *ngIf="task.status === 'C'" class="bi bi-arrow-return-right me-1" (click)="changeState(task)"></i>
-                  <span *ngSwitchCase="'P'">Pendiente</span>
-                  <span *ngSwitchCase="'IP'">En proceso</span>
-                  <span *ngSwitchCase="'C'">Completada</span>
-                </td>
-                
-                <!-- Columna Fecha -->
-                <td>{{ task.expirationDate | date: 'shortDate' }}</td>
-                
-                <!-- Columna Acciones -->
-                <td>
-                  <i class="bi bi-pencil-square me-2" title="editar" (click)="mostrarMensaje()"></i>
-                  <i class="bi bi-trash" title="Eliminar" (click)="delete(task)"></i>
-                </td>
-              </ng-container>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+      <ng-container *ngFor="let task of taskList">
+
+        <app-taskresume *ngIf="task.isDelete != true"  [taskInput]="task" (eventTaskModify)="modifyTask($event)"></app-taskresume>
+
+      </ng-container>
     </div>
   </div>
 </div>
-
-<!--<div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h3>Listado de Tareas</h3>
-      </div>
-      <div class="col-md-12">
-        <div class="list-group">
-          <div class="list-group-item" *ngFor="let task of taskList" [ngClass]="{
-            'list-group-item-danger': task.priority === 'H',
-            'list-group-item-warning': task.priority === 'M',
-            'list-group-item-success': task.priority === 'L'
-          }">
-            <div class="d-flex w-100 justify-content-between align-items-center">
-              <h5>
-                <i *ngIf="(task.priority === 'L' || task.priority === 'M') && task.status != 'C'" 
-                   class="bi bi-arrow-up-circle-fill me-1"></i>
-                <i *ngIf="(task.priority === 'M' || task.priority === 'H') && task.status != 'C'" 
-                   class="bi bi-arrow-down-circle-fill me-1"></i>
-                {{ task.name }}
-              </h5>
-              <small>
-                <i *ngIf="task.status === 'P'" class="bi bi-play-fill me-1"></i>
-                <i *ngIf="task.status === 'IP'" class="bi bi-check-lg me-1"></i>
-                <i *ngIf="task.status === 'C'" class="bi bi-arrow-return-right me-1"></i>
-                {{ task.status === 'P' ? 'Pendiente' : task.status === 'IP' ? 'En proceso' : 'Completada' }}
-              </small>
-            </div> 
-            <p class="mb-1">{{ task.description }}</p>
-            <div class="d-flex w-100 justify-content-between align-items-center">>
-              <small>Expira: {{ task.expirationDate | date: 'shortDate' }}</small>
-              <div>
-                <i class="bi bi-pencil-square me-3" title="Editar"></i>
-                <i class="bi bi-trash" title="Eliminar"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-  
